# Armageddon_V3.0.0

./: BUILD_COMMANDS.sh  BUILD_NOTES.md  BUILD_SUMMARY.md  CMakeLists.txt  CMakeLists_ROOT.txt  FILES_CHECKLIST.md  FILE_ORGANIZATION.md  FINAL_SUMMARY.md  MASTER_FILE_LIST.txt  QUICK_START.txt  README.md  SETUP_GUIDE.md  START_HERE.md  gitignore  idf_component.yml  sdkconfig
.zencoder/rules/: repo.md
components/esp_tinyusb/: CMakeLists.txt
main/: CMakeLists.txt  badusb_ducky.cpp  badusb_ducky.h  badusb_keyboard.cpp  badusb_keyboard.h  config.cpp  config.h  framework.cpp  framework.h  logger.cpp  logger.h  main.cpp  tinyusb_descriptors.cpp  tinyusb_descriptors.h  tinyusb_hid_callbacks.cpp  tinyusb_hid_callbacks.h  tusb_config.h  web_ui.cpp  web_ui.h  web_ui_html.h  wifi_attacks.cpp  wifi_attacks.h  wifi_init.cpp  wifi_init.h
main/tusb/: tusb_config.h
